--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
     <h1>{{title}}</h1>
 
-    <a href="/">Weather</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
+    <a style="color: white;" href="/">Weather</a>
+    <a style="color: white;" href="/about">About</a>
+    <a style="color: white;" target="_blank" href="https://github.com/frankxliu">Developer</a>
 </header>
