--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="/img/weather.png">
-    <title>Help</title>
+    {{!-- <link rel="icon" href="/img/weather.png"> --}}
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap" rel="stylesheet">
+    
+    <title>Caelum - Devloper</title>
 </head>
 <body>
     {{!-- {{>}} to indicate reference to hbs partial --}}
