--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="/img/weather.png">
+    <link rel="stylesheet" href="/css/queries.css">
+    {{!-- <link rel="icon" href="/img/weather.png"> --}}
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap" rel="stylesheet">
 
     <title>Document</title>
     
@@ -14,13 +16,33 @@
     <div class="main-content">
         {{>header}}
 
-        <form>
+        <form id="searchForm">
             <input placeholder='Location'>
             <button type='search'>Search</button>
         </form>
 
-        <p id='message-1'></p>
-        <p id='message-2'></p>
+        <div id="areaID" class="message">
+            <p id='location'></p>
+            <p id="time"></p>
+
+        </div>
+
+        <div id="temperature" class="message">
+            <img id="weatherIcon" class="icon" src="" alt="">
+            <p id='message-2'></p>
+        </div>
+        
+        <div id="windSpeed" class="message">
+            <img id="windIcon" class="icon" src="" alt="">
+            <p id='message-3'></p>
+        </div>
+
+        <div id="rain" class="message">
+            <img id="rainIcon" class="icon" src="" alt="">
+            <p id='message-4'></p>
+        </div>
+
+
     </div>
     
     {{>footer}}
