--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,7 +8,7 @@
     {{!-- <link rel="icon" href="/img/weather.png"> --}}
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Caelum Weather</title>
     
 </head>
 
