--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -18,11 +18,10 @@
         </div>
 
         <div id="para">
-            <p>Caelum is a simple, minimalistic, and functional application that provides real time data of the entered location's weather.</p>
+            <p>Caelum is a simple, and minimalistic application that provides data of the entered location's weather at certain time points.</p>
             <p>This app an experimental demo integrating the new languages, skills, and libraries learned in the process. This weather application
-                uses the Weatherstack's RESTful API to retrieve real-time climate data corresponding to the user's input. </p>
+                demonstrates the usage of Weatherstack's RESTful API to retrieve climate data upon the request of the user's input of location. </p>
         </div>
-        {{!-- <img class="portrait" src="/img/weather.png" alt=""> --}}
     </div>
     {{>footer}}
 </body>
