--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -24,7 +24,7 @@
         <div id="areaID" class="message">
             <p id='location'></p>
             <p id="time"></p>
-
+            <p id="observedTime"></p>
         </div>
 
         <div id="temperature" class="message">
